[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
regex-syntax = "0.6.27"
arrow = "26.0.0"
clap = { version = "3", features = ["derive", "cargo"] }
datafusion = { version = "14.0.0" }
dirs = "4.0.0"
env_logger = "0.9"
mimalloc = { version = "0.1", default-features = false }
object_store = { version = "0.5.0", features = ["aws", "gcp"] }
rustyline = "10.0"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync", "parking_lot"] }
url = "2.2"
async-trait = "0.1.57"
bytes = "1.1"
chrono = "0.4"
futures = "0.3"
parking_lot = "0.12"
snafu = "0.7"
log = "0.4.17"
walkdir = "2.3"
tikv-jemallocator = "0.5.0" 
