[workspace]
members = [
    "memory_cache",
    "flatten",
    "tprun",
    "json",
    "matchmap",
    "web",
    "idgen",
    "hash",
    "nats",
    "mutex",
    "find",
]
resolver = "2"


[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT-2.0"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
regex = "1"
regex-syntax = "0.6.27"
clap = { version = "3", features = ["derive", "cargo"] }
dirs = "4.0.0"
env_logger = "0.9"
rustyline = "10.0"
tokio = { version = "1.0", features = ["full"] }
url = "2.2"
async-trait = "0.1.57"
bytes = "1.1"
chrono = "0.4"
futures = "0.3"
parking_lot = "0.12"
snafu = "0.7"
log = "0.4.17"
walkdir = "2.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1"
simd-json = "0.13"
deepsize = "0.2"
memchr = "2.7"
once_cell = "1.17"
humansize = "2"
blake3 = "1.3"
xxhash-rust = { version = "0.8.6", features = ["xxh3", "const_xxh3"] }
hex = "0.4"
itertools = "0.10"
ahash = "0.8.3"
hashbrown = "0.14"
indexmap = { version = "2.0", features = ["serde"] }
rs-snowflake = "0.6"
rand = "0.8"
flatten-json-object = "0.6"
heed = "0.20.0-alpha.3"
tempfile = "3.7.0"
uuid = { version = "1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
jsonwebtoken = "9.1.0"
mimalloc = { version = "0.1", default-features = false }
lru = "0.10"
hashlink = "0.8.4"
dashmap = "5.5.3"
cpal = "0.12.1"
actix-web = "4.4.0"
arrow = { version = "50.0.0", features = ["prettyprint"] }
arrow-schema = "50"
