[package]
name = "flatten"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytes.workspace = true 
tokio.workspace = true
flatten-json-object.workspace = true
serde_json.workspace = true
anyhow.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }
 
[[bench]]
name = "flatten"
harness = false
