[package]
name = "hash"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ahash.workspace = true
anyhow.workspace = true
bytes.workspace = true
cityhasher = { version = "0.1", default-features = false }
gxhash = "3.1.1"
murmur3 = "0.5.2"
tokio.workspace = true
xxhash-rust.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }

[[bench]]
name = "bench"
harness = false
