[package]
name = "idgen"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytes.workspace = true 
tokio.workspace = true
once_cell.workspace = true
anyhow.workspace = true
parking_lot.workspace = true
rs-snowflake = "0.6.0"
rand = "0.8"
getrandom = "0.2.11"
svix-ksuid = { version = "0.8", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }
 
[[bench]]
name = "bench"
harness = false
