[package]
name = "tprun"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ahash.workspace = true
anyhow.workspace = true
arrow.workspace = true
arrow-schema.workspace = true
async-trait = "0.1.79"
bytes.workspace = true
get-size = {version = "0.1", features = ["derive"]}
indexmap.workspace = true
memory-stats = "1.2.0"
reqwest = "0.11.24"
serde_json.workspace = true
sysinfo = "0.33"
tokenizers = { version = "0.15.2", features = ["hf-hub"] }
tokio.workspace = true
