[package]
name = "web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ahash.workspace = true
anyhow.workspace = true
arrow.workspace = true
arrow-schema.workspace = true
get-size = {version = "0.1", features = ["derive"]}
serde_json.workspace = true
tokio.workspace = true
tokio-util = "0.7"
actix-web = "4.4"
actix = "0.13.1"
actix-web-actors = "4.2.0"
bytes.workspace = true
mime = "0.3.17"
futures-core = "0.3.30"
futures.workspace = true
